--- a/tweeter-react/src/index.css
+++ b/tweeter-react/src/index.css
@@ -1,4 +1,10 @@
+* {
+  box-sizing: border-box;
+  border-width: 0;
+}
+
 body {
+  color: rgb(20, 23, 26);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +13,41 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+svg {
+  fill: currentColor;
+}
+
+.bordered {
+  border-color: rgb(230, 236, 240);
+  border-style: solid;
+}
+
+.left {
+  flex: 0 0 auto;
+  margin-right: 10px;
+}
+
+.right {
+  flex: 1;
+  padding-bottom: 10px;
 }
